--- a/scrumboard/package.json
+++ b/scrumboard/package.json
@@ -9,6 +9,9 @@
     "start": "npm run serve"
   },
   "dependencies": {
+    "bootstrap": "^4.2.1",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.6",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
