--- a/locatify/package.json
+++ b/locatify/package.json
@@ -57,6 +57,7 @@
         "framework7-vue": "^3.4.0",
         "loglevel": "^1.4.1",
         "material-design-icons": "^3.0.1",
+        "shelljs": "^0.8.3",
         "vue": "^2.5.17",
         "vuex": "^3.0.1"
     },
