--- a/locatify/package.json
+++ b/locatify/package.json
@@ -58,8 +58,7 @@
         "loglevel": "^1.4.1",
         "material-design-icons": "^3.0.1",
         "shelljs": "^0.8.3",
-        "vue": "^2.5.17",
-        "vuex": "^3.0.1"
+        "vue": "^2.5.17"
     },
     "displayName": "Locatify",
     "cordova": {
